# rwth-mensa-butler

./: .gitattributes  .gitignore  LICENSE  README.MD  README.md  renovate.json
.github/workflows/: ci.yml
alexa-skill/: .gitignore  README.MD  README.md  package.sh
alexa-skill/lambda-pdm/: README.md  mypy.ini  pyproject.toml
alexa-skill/lambda-pdm/src/: .env.template  config.py  lambda_function.py
alexa-skill/lambda-pdm/src/data/: dynamodb.py  mensas.py  menu_model.py
alexa-skill/lambda-pdm/src/handler/: cancel_intent_handler.py  catch_all_exception_handler.py  get_mensa_offerings_intent_handler.py  help_intent_handler.py  launch_request_handler.py  session_ended_request_handler.py
alexa-skill/lambda-pdm/src/locales/de-DE/LC_MESSAGES/: skill.po
alexa-skill/lambda-pdm/src/locales/en-US/LC_MESSAGES/: skill.po
alexa-skill/lambda-pdm/src/src/: config.py
alexa-skill/lambda-pdm/src/src/data/: __init__.py  dish_type_filter.py  dynamodb.py  mensas.py  menu_model.py
alexa-skill/lambda-pdm/src/src/handler/: __init__.py  cancel_intent_handler.py  catch_all_exception_handler.py  fallback_intent_handler.py  get_filtered_mensa_offerings_intent_handler.py  get_mensa_offerings_intent_handler.py  get_vegan_or_vegetarian_mensa_offerings_intent_handler.py  help_intent_handler.py  intent_handler_with_mensa_and_date.py  launch_request_handler.py  localization_interceptor.py  session_ended_request_handler.py
alexa-skill/lambda-pdm/src/src/handler/abstract/: __init__.py  i18n_request_handler.py
alexa-skill/lambda-pdm/src/src/handler/mensa_offerings/: __init__.py  data_retriever.py  intent_handler.py  output_pronouncer.py  reprompting_input_retriever.py
alexa-skill/lambda-pdm/src/src/interceptors/: localization_interceptor.py
alexa-skill/lambda-pdm/src/src/utils/: alexa_slots.py  localization.py
alexa-skill/lambda-pdm/src/utils/: alexa_slots.py  localization.py
alexa-skill/lambda-pdm/tests/data/: example_model.json  test_model_parsing.py
alexa-skill/skill-package/: skill.json
alexa-skill/skill-package/skill-package/: skill.json
docs/: architecture.drawio
docs/architecture/: architecture.drawio  buildSvg.sh  darkmode-style-injection.txt
menu-scraper-lambda/: Dockerfile  README.md  go.mod
menu-scraper-lib/: README.md  config.yml  go.mod  go.sum
menu-scraper-lib/pkg/model/: config.go
menu-scraper-lib/pkg/scraper/: config.go  fetch.go  mensa_day_scrapper.go
menu-scraper-lib/pkg/scrapper/: mensa_extra_scrapper.go  mensa_menu_scrapper.go  mensa_offering_scrapper.go
menu-scraper-lib/pkg/utils/: strings.go
menu-scraper-lib/test/: scrapper_test.go
menu-scrapper/: go.mod
menu-scrapper-lambda/: Dockerfile  README.md  go.mod  go.sum
menu-scrapper-lib/: README.md  config.yml  go.mod  go.sum
menu-scrapper-lib/pkg/model/: menu.go
menu-scrapper-lib/test/: scrapper_test.go
menu-scrapper/model/: config.go
menu-scrapper/scrapper/: config.go  fetch.go  mensa_day_scrapper.go  mensa_extra_scrapper.go  mensa_menu_scrapper.go  mensa_offering_scrapper.go
menu-scrapper/test/: scrapper_test.go
sam-app/: .gitignore  README.md  docker-compose.yml  invokeFunctionLocally.sh  performLocalIntegrationTest.sh  samconfig.toml  template.yaml
sam-app/rwth-mensa-dummy/: Dockerfile  README.MD
(+26 files in other folders)
