[project]
name = "rwth-mensa-buttler-alexa-skill"
version = "0.1.0"
description = "An Alexa-Hosted skill for the mensa of RWTH-Aachen"
authors = [
    {name = "MarcTM01", email = "108792843+MarcTM01@users.noreply.github.com"},
]
dependencies = [
    "boto3==1.28.78",
    "ask-sdk-core==1.19.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
lint = "ruff check --fix ."
format = "ruff format ."
typecheck = "mypy ./src/"
test = "pytest tests/"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.4.4",
]
typecheck = [
    "mypy>=1.10.0",
    "boto3-stubs[essential]>=1.34.107",
]
i18n = [
    "babel>=2.15.0",
]
test = [
    "pytest>=8.2.0",
]

[tool.ruff.lint]
select = [
    "D",
    "D401",
    "E4",
    "E7",
    "E9",
    "F",
    "I"
]

ignore = [
    "D100", "D104"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pdm]
distribution = false
